2007-09-21  Patrick Mansfield  <patmans@us.ibm.com>

	* libc/machine/spu/sys/dirent.h: New file, add prototypes and SPU
	specific struct and typedef.

2007-09-18  Patrick Mansfield  <patmans@us.ibm.com>

	* libc/include/sys/types.h: Use __dev_t, __uid_t, and __gid_t to
	typedef dev_t, gid_t, and uid_t.
	* libc/include/sys/_types.h: Move previous dev_t, uid_t and gid_t
	types.h code to here, but typedef __dev_t, __uid_t, and __gid_t instead.
	Change to lower case for all __foo_t_defined names.
	* libc/machine/spu/machine/_types.h: Add SPU specific __dev_t,
	__uid_t, and __gid_t making them all four bytes. Change to lower case
	for all __foo_t_defined names.

2007-09-18  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/reent/renamer.c: New file.
	* libc/reent/Makefile.am: Add new file.
	* libc/reent/Makefile.in: Regenerated.
	* libc/stdio/rename.c: Break out _rename_r code into reent/renamer.c
	and add check for rename syscall.

2007-09-17  Eric Blake  <ebb9@byu.net>

	Obey POSIX on printf("%.s", (char*)NULL).
	* libc/stdio/vfprintf.c (_VFPRINTF_R): Take precision into account
	for %s on NULL.  Skip NULL check when optimizing for size.

2007-09-07  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/include/sys/_types.h: Protect all types with flag
	checks to allow definition in machine/_types.h.

2007-09-07  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/sys/linux/sys/_types.h: Add _fpos_t and _fpos64_t
	definitions in light of the previous change.

2007-09-07  Patrick Mansfield  <patmans@us.ibm.com>

	* libc/include/machine/_default_types.h: New file, contains what
	was previously in libc/include/machine/_types.h.
	* libc/include/machine/_types.h: Now only includes
	machine/_default_types.h.
	* libc/include/sys/reent.h: Remove _fpos_t and _fpos64_t.
	* libc/include/sys/_types.h: Move _fpos_t and _fpos64_t to here,
	with conditional declarations.
	* libc/machine/spu/machine/_types.h: New file, add SPU specific
	typedefs for _fpos_t and _fpos64_t.
